// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Popover component should close the Popover when button inside popover clicked and match snapshot 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="menu-trigger"
    >
      Trigger
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Popover component should render Popover when open and match snapshot 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="menu-trigger"
    >
      Trigger
    </button>
    <mock-styled.div
      aria-labelledby="menu-header"
      classname="menu-popover"
      hidden="false"
      role="menu"
      style="position: absolute;"
    >
      <div>
        Popover Content
      </div>
      <button
        type="button"
      >
        Close
      </button>
    </mock-styled.div>
  </div>
</DocumentFragment>
`;

exports[`Menu Trigger component should render Trigger and match snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="menu-trigger"
  >
    Trigger
  </button>
</DocumentFragment>
`;

exports[`Menu component should render Menu and match snapshot 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.ul>
      <li>
        <mock-styled.div>
          Radio Title
        </mock-styled.div>
      </li>
      <mock-styled.li
        aria-selected="true"
        data-selected="true"
        role="option"
      >
        <mock-styled.span
          aria-hidden="true"
          classname="mock-css."
        >
          <svg
            role="img"
            title="Icon image with name check"
          />
        </mock-styled.span>
        Item 1
      </mock-styled.li>
      <mock-styled.li
        role="option"
      >
        Item 1
      </mock-styled.li>
    </mock-styled.ul>
    <mock-styled.ul>
      <li>
        <mock-styled.div>
          Group Title
        </mock-styled.div>
      </li>
      <mock-styled.li>
        Item 1
      </mock-styled.li>
      <mock-styled.li>
        Item 2
      </mock-styled.li>
    </mock-styled.ul>
  </mock-styled.div>
</DocumentFragment>
`;
